fixed about spacing issues

--- a/app/assets/stylesheets/pages/_about.scss
+++ b/app/assets/stylesheets/pages/_about.scss
@@ -17,16 +17,19 @@
 
 .section-3 {
   width: 25em;
-  padding: 0 2em;
+  padding-bottom: 2em;
 }
 
 .content {
-    max-width: 80vw;
-    padding: 2em 0;
-   h2 {
-      padding-bottom: 0.5em;
-    }
+  max-width: 80vw;
+  margin-top: 2em;
+  h2 {
+    padding-bottom: 0.5em;
   }
+  p {
+
+  }
+}
 
 .about-section-1 {
   display: flex;
@@ -37,7 +40,7 @@
 
 .about-section-1-img-container {
   width: 100%;
-  height: 60vh;
+  height: 50vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -61,7 +64,7 @@
 
 .about-section-2-img-container {
   width: 100%;
-  height: 60vh;
+  height: 40vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -84,7 +87,7 @@
 
 .about-section-3-img-container {
   width: 100%;
-  height: 60vh;
+  height: 50vh;
   display: flex;
   justify-content: center;
   align-items: center;
